--- a/flex/07-flex-layout-2/index.html
+++ b/flex/07-flex-layout-2/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
-      MY AWESOME WEBSITE
+    <div class="header">My Awesome Website
     </div>
     
     <div class="container">
@@ -31,7 +30,7 @@
         <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
       </section>
     </div>
-    
+
     <div class="footer">
       The Odin Project ❤️
     </div>
