--- a/flex/07-flex-layout-2/index.html
+++ b/flex/07-flex-layout-2/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">My Awesome Website
+    <div class="header">
+      <h1>My Awesome Website</h1>
     </div>
     
     <div class="container">
@@ -32,7 +33,7 @@
     </div>
 
     <div class="footer">
-      The Odin Project ❤️
+      <p>The Odin Project ❤️</p>
     </div>
   </body>
 </html>
